# gphotos-storage-saver

./: CLAUDE.md  CREDITS.md  LICENSE  README.md  jpg_to_webp.py  pyproject.toml  requirements.txt  takeout_merge.py
.github/workflows/: ci.yml
tests/: conftest.py  test_jpg_to_webp.py  test_takeout_merge.py
