[project]
name = "gphotos-storage-saver"
version = "0.1.0"
description = "Convert Google Photos Takeout images to modern formats and merge Takeout metadata sidecars back into media files."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.14"
dependencies = []

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities",
]
