[project]
name = "gphotos-storage-saver"
version = "0.1.0"
description = "Convert Google Photos Takeout images to modern formats and merge Takeout metadata sidecars back into media files."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.14"
dependencies = [
    "Pillow>=11.0",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
avif = ["pillow-avif-plugin>=1.4"]
heif = ["pillow-heif>=0.20"]
jxl  = ["pillow-jxl-plugin>=1.3"]
all  = ["pillow-avif-plugin>=1.4", "pillow-heif>=0.20", "pillow-jxl-plugin>=1.3"]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
