[project]
name = "gphotos-storage-saver"
version = "0.1.0"
description = "Convert Google Photos Takeout images to modern formats and merge Takeout metadata sidecars back into media files."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.14"
dependencies = [
    "pillow>=11.0",
    "piexif>=1.1.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "pillow-jxl-plugin>=1.3.7",
    "pillow-heif>=1.3.0",
]

[project.optional-dependencies]
avif = ["pillow-avif-plugin>=1.4"]
heif = ["pillow-heif>=0.20"]
jxl  = ["pillow-jxl-plugin>=1.3"]
all  = ["pillow-avif-plugin>=1.4", "pillow-heif>=0.20", "pillow-jxl-plugin>=1.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
